htdocs/stc/celerity/celerity.css
/* ... */
/**
 * Global
 */

body {
    font-family: Arial, Verdana, sans-serif;
    line-height: 1.25em;
    background-color: f9f9f0;
    color: #222211;
}

H1, H2, #content H2, H3, H4 { font-family: "Century Gothic", Verdana, sans-serif; 
    font-weight: normal;
    padding: .5em 0;
	line-height: 1.5;
    }
H1 { font-size: 175%; }
H2, #content H2 { font-size: 150%; }
H3 { font-size: 125%; }
H4 { font-size: 100%; }

ul { list-style: square;
    margin-left: 1em; }

a:link,
.link {
    color: #888833;
}
a:visited {
    color: #666611;
}
a:hover,
a:active,
.link:hover {
    text-decoration: none;
}

#canvas {
    padding-top: 1px;  /*to ensure margin*/
}
#page {
    margin-bottom: 2em;
    padding-top: 1px;  /*to ensure margin*/
}
/*Scheme specific div to contain sidebar stripes*/
#page-decoration { background-image: url("/img/celerity/lt-stripe.jpg"); 
    background-repeat: repeat-x;
    background-position: top;
    width: 9em;
    height: 50px;
    margin-left: 1em;
    margin-top: -50px;
    float: left;
    display: inline; /* to defeat the IE double-margin bug */ }
    
/**
 * Header
 */
#masthead { position: absolute;
    top: 50px;
    right: 25px;
    }
    #sitename { font-family: "Century Gothic", Verdana, sans-serif; 
        font-weight: normal; 
        font-size: 175%;
        }
    #sitename a { color: #888844; }
    
#account-links {
     position: absolute;
    top: 3px;
    left: 13em;
    text-align: left;
    font-size: small;
}
#account-links ul { list-style: none;
        margin-left: 0;
        padding-left: 0;
        margin-top: 5px;
        white-space: nowrap; /* to make sure the links don't wrap under short usernames */
        }
#account-links li { display: inline; }

#account-links #login-table td {
    padding: 3px;
    text-align: left;
}
#account-links #login-table td.input-cell,
#account-links #login-table td.remember-me-cell {
    text-align: left;
}

/*Scheme specific divs to contain header stripes*/
#header-divider { position: absolute;
    top: 110px;
    left: 0;
    background-color: #999966;
    background-image: url("/img/celerity/dk-stripe.jpg");
    background-position: right;
    background-repeat: repeat-y;
    width: 100%;
    }
    #header-divider-insert { margin-left: 1em;
        height: 20px;
        width: 9em;
        background: url("/img/celerity/stripes.jpg");
        background-position: center;
        }

#header-search { position: absolute;
    top: 140px;
    right: 22px;
    text-align: right;
    }
    
/**
 * Sidebar and Menu 
 */
#sidebar { position: absolute;
    top: 0;
    left: 1em;
    width: 9em;
    background-color: #DDDDAA;
    }
    #sidebar ul { margin-left: 5px;
        margin-right: 3px;
        margin-top: 40px;
        padding-left: 0;
        font-size: small;
        list-style: none;
        }
        #sidebar ul ul { margin-left: 1em; 
            margin-right: 0;
            margin-top: 0;
        }
    #sidebar li { padding: .15em 0; }
    #sidebar a {color: #222200; }
    
#header-userpic { text-align: center;
    height: 100px; 
    background-image: url("/img/celerity/square.jpg");
    background-repeat: no-repeat;
    background-position: center;
    }
    #header-userpic img { margin-top: 10px;
        border: none; 
        background-color: #DDDDAA; /*so the square doesn't show behind transparent icons */
        }

/**
 * Footer
 */
#footer { border-top: 4px double #999966;
    border-bottom: 4px double #999966;
    margin: 1em;
    text-align: center;
    }
    #footer ul { list-style: none;
        margin: .25em 0;
        margin-left: 0;
        padding-left: 0;
        }
    #footer li { display: inline; }
    #footer p { margin: .25em 0;
        padding: 0;
        font-size: small;
        color: #666666;
        }

/**
 * #content 
 */
#content {
    margin-left: 1em;
    border-left: 9em solid #DDDDAA;
    margin-top: 170px;
    padding: 1px 1em 1em 1.5em;
    min-height: 45em;
    height: auto !important; /*these two lines are a min-height hack that fixes it in IE6*/
      height: 45em;
}

#content p {
    margin-bottom: 1em;
}
#content p.note {
    font-style: italic;
    font-size: 0.8em;
}
#content ul.bullet-list {
    list-style: square outside;
    margin-left: 2em;
    margin-bottom: 1em;
}

/* TALKPAGE.CSS AND HARDCODE OVERRIDES*/
.cmtbar-odd {
    border-bottom: none !important;
    border-right: none !important;
    background-color: #EEEECC !important;
}
.cmtbar-even {
    border-bottom: none !important;
    border-right: none !important;
    background-color: #DDDDBB !important;
}

/*insert class of screened comments here*/ {
    background-color: #EEEEEE; }
    
/* PROFILE.CSS OVERRIDES */
#profile_top {
    min-width: 0;
}

.username {
    border-bottom: 1px solid #999966 !important;
    background-color: #EEEECC !important;
}


/**
 * Content Layouts
 *
 * Content layouts are determined based on the class assigned to #content. Potential layouts include:
 * -- wide sidebars
 * -- thin sidebars
 * -- equal width/height columns
 * -- full page (default)
 *
 * Columns/rows inside of #content are named primary, secondary, tertiary, etc and
 * content is placed inside based on order of importance.
 */
 
 /* ER Note:  Unsure of actual use of these, taking a stab at them anyway, mostly re-measuring width */

/* full page (default) */
#primary,
#secondary {
    margin-bottom: 2em;
}
/* 2 column wide right sidebar */
.layout-wide-right-sidebar #primary {
    width: 65%;
    margin-right: 1.25em;
    float: left;
    padding: 0;
}
.layout-wide-right-sidebar #secondary {
    float: right;
    width: 30%;
    margin: 0;
    padding: 0;
    padding-top: 0.5em;
}
/**
 * Panels are generic boxes for divs inside of #content
 */
#content #primary .panel,
#content #secondary .panel {
    width: 100%;
    border-width: 1px 0 1px 0;
    border-color: #ccc;
    border-style: solid;
    margin: 0 0 0.166667em 0;
    overflow: hidden;
}
/* ... */

